Fixe drag on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -561,6 +561,7 @@ button:focus {
   width: 5vw;
   text-align: center;
   border: none;
+  touch-action: manipulation;
 }
 
 .nav-button img {
